fixed style.css added the style to less file os they stuck.this is the final template. now styling is needed

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -217,6 +217,24 @@
     text-align: center;
 }*/
 
+/* Same for all show all buttons*/
+.showMorePage {
+    font-family:'Open Sans', sans-serif;
+    font-size:12px;
+    letter-spacing:2px;
+    text-transform:uppercase;
+    margin-top:25px;
+    text-align: center;
+    color: #000;
+}
+.showMorePage a {
+  color: #000;
+}
+
+.showMorePage a:hover {
+  color: #4d4d4d;
+}
+
 /* About section */
 #aboutContent {
     padding-left: 60px;
@@ -250,8 +268,6 @@
   background-color: #E6E6E6; /* Lighter Theme Color 1 */
 }
 
-
-
 #accordIns h2 {
   text-align: left;
   
@@ -280,7 +296,7 @@
   display:none;
 }
 #moreIns-trig:hover, #lessIns-trig:hover {
-  color:#22537e;
+  color:#4d4d4d;
   cursor: pointer;
 }
 
@@ -379,14 +395,17 @@
 #locationInfo_map {
   width: 90%;
   margin-top: 30px;
-  
+}
+
+#locationInfo_addr td {
+  padding-left: 10px;
 }
   
-th {
+#locationInfo_hrs th {
   text-align: right;
 }
 
-td {
+#locationInfo_hrs td {
   padding-left: 15px;
 }
 
@@ -446,7 +465,7 @@ footer {
   background-color: @mainNavFooter;
   color: @mainNavFooterTxt;
   font-family:'Open Sans', sans-serif;
-  font-size:16px;
+  font-size:14px;
   padding:40px 0 30px;
   float:left;
 }
@@ -457,9 +476,15 @@ footer ul {
 footer a {
   color:#fff;
 }
+
+footer a:hover{
+  color: #cccccc;
+}
+
+
 .footnote {
   text-align:center;
-  font-size:12px;
+  font-size:10px;
   padding-top:30px;
   padding-bottom:25px;
 }
